# cvision-pytorch

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
cvision/classifiers/lenet_custom/: lenet_custom.py
cvision/datasets/: PennFudanDataset.py
datasets/: PennFudanDataset.py
references/detection/: coco_utils.py
scripts/lenet_custom_MNIST/: script.py
scripts/ped_detection/: finetuning_frcnn.py
scripts/torchvision_object_detection_tutorial/: script.py
src/cvision/classifiers/: lenet_custom.py
src/cvision/datasets/: CaltechPedCOCODataset.py  PennFudanDataset.py
src/references/detection/: engine.py  presets.py  train.py
