[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvision-pytorch"
version = "0.0.1"
authors = [
  { name="Joshua Hughes", email=" JoshJHughes@users.noreply.github.com" },
]
description = "Collection of scripts to learn/practice PyTorch/computer vision."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA :: 11.8"
]
dependencies = [
  "torch >= 2.0.1",
  "torchvision >= 0.15.2",
  "matplotlib >= 3.7",
  "pycocotools >= 2.0.7",
]

[project.urls]
"Homepage" = "https://github.com/JoshJHughes/cvision-pytorch"